@@ -1,6 +1,7 @@
 2013-03-13  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Resolves ##48156: Add backend module to generate language packs
+	* Resolves #48156: Add backend module to generate language packs
+	* Resolves #48161: Localization should honour alternative languages
 
 2013-03-05  Stanislas Rolland  <typo3@sjbr.ca>
 
